[gd_scene load_steps=47 format=3 uid="uid://cch1si6xtrxif"]

[ext_resource type="Script" path="res://Script/Enemy/Boss/EldritchWorm/eldritch_worm.gd" id="1_0t231"]
[ext_resource type="Material" uid="uid://cmv24i1lrmfiw" path="res://Shader/enemy.tres" id="2_8nwje"]
[ext_resource type="Script" path="res://Script/CombatComponent/hurt_box.gd" id="2_doyyx"]
[ext_resource type="Texture2D" uid="uid://twec2pin0neo" path="res://Art/Enemy/WormBoss/worm_boss.png" id="2_jdswt"]
[ext_resource type="Script" path="res://Script/CombatComponent/attack_box.gd" id="3_i14tl"]
[ext_resource type="Script" path="res://Script/Enemy/State/enemy_state_machine.gd" id="4_3ttws"]
[ext_resource type="Script" path="res://Script/CombatComponent/damage_data.gd" id="5_6niub"]
[ext_resource type="Texture2D" uid="uid://dbffa3d86qrba" path="res://Art/Effect/Tex_random.png" id="5_c0xio"]
[ext_resource type="Script" path="res://Script/Enemy/Boss/EldritchWorm/State/boss_idle.gd" id="6_5jewi"]
[ext_resource type="Texture2D" uid="uid://mrdy362tqpjr" path="res://Art/Effect/slash_1.png" id="6_q0cyc"]
[ext_resource type="Script" path="res://Script/Enemy/Boss/EldritchWorm/State/enemy_standby.gd" id="7_bm3r6"]
[ext_resource type="PackedScene" uid="uid://bkijr6cnrf2dy" path="res://Scenes/Effect/dead_particle.tscn" id="7_tsa6o"]
[ext_resource type="Texture2D" uid="uid://byku3155bejsl" path="res://Art/Effect/hollow fade circle.png" id="8_8jd00"]
[ext_resource type="Script" path="res://Script/Enemy/Boss/EldritchWorm/State/enemy_underground.gd" id="8_t1of4"]
[ext_resource type="AudioStream" uid="uid://cg34kv7j6hqy5" path="res://Audio/HitSound/face_hit_small_78.wav" id="9_17gou"]
[ext_resource type="Script" path="res://Script/Enemy/Boss/EldritchWorm/State/boss_spilt_projectile.gd" id="9_uphaw"]
[ext_resource type="AudioStream" uid="uid://dgcehrixe8dlp" path="res://Audio/HitSound/body_hit_finisher_23.wav" id="10_xbivy"]
[ext_resource type="Script" path="res://Script/Enemy/Boss/EldritchWorm/State/boss_dead.gd" id="12_8tdos"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e787n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lk51e"]
size = Vector2(178, 340)

[sub_resource type="Resource" id="Resource_oshs2"]
script = ExtResource("5_6niub")
damage = 1.0
impact = 0.0
knockback = 0.0
sender_position = Vector2(0, 0)
take_damage_rule = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fo6ov"]
size = Vector2(144, 320)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hbwjw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5l0ys"]
atlas = ExtResource("5_c0xio")
region = Rect2(40.1037, 196.189, 117.956, 113.449)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_gwi7e"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 4
particles_anim_loop = true

[sub_resource type="Gradient" id="Gradient_w5baj"]
offsets = PackedFloat32Array(0, 0.916914, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.197937, 0.197937, 0.197937, 1, 0.0705882, 0.0705882, 0.0705882, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1a63i"]
gradient = SubResource("Gradient_w5baj")

[sub_resource type="Curve" id="Curve_032xl"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.389474), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_fy66m"]
curve = SubResource("Curve_032xl")

[sub_resource type="Curve" id="Curve_tikh8"]
max_value = 1024.0
_data = [Vector2(0, 1024), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_rveq2"]
curve = SubResource("Curve_tikh8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ea5uh"]
lifetime_randomness = 0.4
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(50, 1, 1)
direction = Vector3(0, -1, 0)
initial_velocity_min = 110.24
initial_velocity_max = 365.35
velocity_limit_curve = SubResource("CurveTexture_rveq2")
gravity = Vector3(0, 500, 0)
linear_accel_max = 100.0
scale_min = 0.01
scale_max = 0.3
scale_curve = SubResource("CurveTexture_fy66m")
color = Color(0.466667, 0.560784, 0.639216, 1)
color_ramp = SubResource("GradientTexture1D_1a63i")

[sub_resource type="AtlasTexture" id="AtlasTexture_t43v5"]
atlas = ExtResource("5_c0xio")
region = Rect2(41.5117, 196.086, 115.429, 114.746)

[sub_resource type="Gradient" id="Gradient_icaya"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_80i21"]
gradient = SubResource("Gradient_icaya")

[sub_resource type="Curve" id="Curve_dg0qp"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.649457, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.936842), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_4wyov"]
curve = SubResource("Curve_dg0qp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4dy4h"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.5
scale_curve = SubResource("CurveTexture_4wyov")
color_ramp = SubResource("GradientTexture1D_80i21")
sub_emitter_mode = 2
sub_emitter_amount_at_end = 20

[sub_resource type="Animation" id="Animation_hs81g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_jdswt")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackBox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-8, -144.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Particle/Diging:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.001),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:vframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.001),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite2D:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_g6at3"]
resource_name = "attack_from_under"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_jdswt")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackBox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-8, -158), Vector2(-8, -41)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Particle/Diging:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.361656),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.299566),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_2tvfv"]
resource_name = "dead"
length = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0236836),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_c3ikt"]
resource_name = "idle"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Particle/Diging:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1ua4m"]
resource_name = "intro"

[sub_resource type="Animation" id="Animation_rdx11"]
resource_name = "split_projectile"

[sub_resource type="Animation" id="Animation_epgs2"]
resource_name = "standby"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_jdswt")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_28f3p"]
_data = {
"RESET": SubResource("Animation_hs81g"),
"attack_from_under": SubResource("Animation_g6at3"),
"dead": SubResource("Animation_2tvfv"),
"idle": SubResource("Animation_c3ikt"),
"intro": SubResource("Animation_1ua4m"),
"split_projectile": SubResource("Animation_rdx11"),
"standby": SubResource("Animation_epgs2")
}

[node name="EldritchWorm" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_0t231")

[node name="GroundCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -45)
shape = SubResource("CircleShape2D_e787n")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("2_8nwje")
position = Vector2(0, -166)
texture = ExtResource("2_jdswt")
vframes = 5

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 10
script = ExtResource("2_doyyx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-3, -160)
shape = SubResource("RectangleShape2D_lk51e")
debug_color = Color(0.282353, 0.607843, 0.466667, 0.419608)

[node name="AttackBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("3_i14tl")
damage_data = SubResource("Resource_oshs2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(-8, -144.5)
shape = SubResource("RectangleShape2D_fo6ov")
debug_color = Color(0.94902, 0, 0.584314, 0.419608)

[node name="EnemyStateMachine" type="Node" parent="." node_paths=PackedStringArray("InitialState")]
script = ExtResource("4_3ttws")
InitialState = NodePath("standby")

[node name="standby" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("animator", "agent")]
script = ExtResource("7_bm3r6")
animator = NodePath("../../AnimationPlayer")
agent = NodePath("../..")

[node name="idle" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("animator", "agent")]
script = ExtResource("6_5jewi")
animator = NodePath("../../AnimationPlayer")
agent = NodePath("../..")

[node name="dig_underground" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("animator", "agent")]
script = ExtResource("8_t1of4")
move_speed = 400.0
animator = NodePath("../../AnimationPlayer")
agent = NodePath("../..")

[node name="split_projectile" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("animator", "agent")]
script = ExtResource("9_uphaw")
animator = NodePath("../../AnimationPlayer")
agent = NodePath("../..")

[node name="dead" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("animator", "agent")]
script = ExtResource("12_8tdos")
animator = NodePath("../../AnimationPlayer")
agent = NodePath("../..")

[node name="Particle" type="Node2D" parent="."]
position = Vector2(0, -104)

[node name="HitEffect" type="CPUParticles2D" parent="Particle"]
material = SubResource("CanvasItemMaterial_hbwjw")
emitting = false
lifetime = 0.5
one_shot = true
preprocess = 0.03
explosiveness = 0.73
randomness = 0.79
local_coords = true
texture = SubResource("AtlasTexture_5l0ys")
emission_shape = 3
emission_rect_extents = Vector2(50, 50)
gravity = Vector2(0, 0)
initial_velocity_min = 185.0
initial_velocity_max = 1000.0
damping_min = 9.0
damping_max = 9.0
scale_amount_min = 0.01
scale_amount_max = 0.3

[node name="SlashEffect" type="CPUParticles2D" parent="Particle"]
material = SubResource("CanvasItemMaterial_gwi7e")
rotation = 0.565487
emitting = false
amount = 1
lifetime = 0.3
one_shot = true
local_coords = true
draw_order = 1
texture = ExtResource("6_q0cyc")
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
scale_amount_min = 0.5
scale_amount_max = 0.7
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="DeadParticle" parent="Particle" instance=ExtResource("7_tsa6o")]

[node name="Diging" type="GPUParticles2D" parent="Particle"]
position = Vector2(0, 104)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_ea5uh")
texture = SubResource("AtlasTexture_t43v5")
randomness = 0.26

[node name="Pulse" type="GPUParticles2D" parent="Particle"]
emitting = false
amount = 1
sub_emitter = NodePath("Dust")
process_material = SubResource("ParticleProcessMaterial_4dy4h")
texture = ExtResource("8_8jd00")
lifetime = 0.3
one_shot = true

[node name="Dust" type="GPUParticles2D" parent="Particle/Pulse"]
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_ea5uh")
texture = SubResource("AtlasTexture_t43v5")
one_shot = true
explosiveness = 0.76
randomness = 0.26

[node name="Audio" type="Node2D" parent="."]

[node name="HitSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("9_17gou")
bus = &"Effect"

[node name="DeadSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("10_xbivy")
bus = &"Effect"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_28f3p")
}
autoplay = "idle"
